# algAudio

./: LICENSE  README.md
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/algAudio/: build.gradle
android/algAudio/src/main/: AndroidManifest.xml
android/algAudio/src/main/cpp/: CMakeLists.txt
android/algAudio/src/main/java/com/algAudio/: algAudio.java
ios/: .gitignore  algAudio.h  algAudio.m
ios/algAudio.xcodeproj/: project.pbxproj
ios/algAudio.xcodeproj/project.xcworkspace/xcuserdata/hsu.xcuserdatad/: UserInterfaceState.xcuserstate
ios/algAudio.xcodeproj/xcuserdata/hsu.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/capture/: audioCapture.h  audioCapture.m
third/ios/ffmpeg/include/libffmpeg/: config.h
